Problem 17: Add basic recursive implementation